getPagination partially implemented tests for method api updated
