# src/main/java/com/example/demo/web/AuthorController.java
@@ -12,7 +12,7 @@ class AuthorController {
     final AuthorRepository repository;
 
     AuthorController() {
-        this.repository = new AuthorRepositoryMapImpl();
+        this.repository = new AuthorRepositoryListImpl();
     }
 
     @PostMapping(consumes = {"application/json"},
@@ -23,12 +23,13 @@ class AuthorController {
 
     @ResponseBody
     @GetMapping(produces = {"application/json"})
-    List<Author> getAllAuthors(@RequestParam(required = false) String name){
-        if(name == null){
-            return repository.getAll();
-        } else {
+    List<Author> getAllAuthors(@RequestParam(required = false) String name, Integer from, Integer to){
+        if(name != null){
             return repository.getAllByName(name);
+        }else if (from >= 0 || to >= 0) {
+            return repository.getPaginated(from, to);
         }
+        return repository.getAll();
     }
 
     @ResponseBody
